--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "@sveltejs/vite-plugin-svelte": "^2.0.2",
     "svelte": "^3.55.1",
     "vite": "^4.1.0"
+  },
+  "dependencies": {
+    "chart.js": "^4.2.1",
+    "chartjs-adapter-luxon": "^1.3.1",
+    "luxon": "^3.3.0"
   }
 }
